// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Block /> should render 1`] = `
.c0 {
  display: block;
}

<div>
  <div
    class="sc-AxhCb c0"
  />
</div>
`;

exports[`<Box /> should render 1`] = `
<div>
  <div
    class=""
  />
</div>
`;

exports[`<Button /> should render 1`] = `
.c0 {
  -webkit-transition: all 150ms ease 0s;
  transition: all 150ms ease 0s;
  outline: none;
  background-color: #fff;
  border-width: 1px;
  color: #374151;
  font-weight: 500;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  white-space: nowrap;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  border-radius: 5px;
}

.c0:hover {
  background-color: #f9fafb;
}

.c0:focus {
  border-color: #a4cafe;
  box-shadow: 0 0 0 3px rgba(118,169,250,.45);
  outline: 0;
}

.c0:disabled {
  opacity: 0.4;
  cursor: not-allowed;
}

<div>
  <button
    class="sc-AxhCb sc-AxheI c0"
    role="button"
  />
</div>
`;

exports[`<Checkbox /> should render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  font-size: 14px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-style: solid;
  border-width: 1px;
  border-radius: 4px;
  width: 16px;
  height: 16px;
  bg: primary;
  margin-right: 8px;
  -webkit-transition: all 200ms ease;
  transition: all 200ms ease;
  border-color: #ecebed;
  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg viewBox='0 0 16 16' fill='%23fff' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.707 7.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4a1 1 0 00-1.414-1.414L7 8.586 5.707 7.293z'/%3E%3C/svg%3E");
  background-color: #fff;
}

.c2:focus {
  border-color: #a4cafe;
  box-shadow: 0 0 0 3px rgba(118,169,250,.45);
  outline: 0;
}

.c1 {
  border: 0px;
  -webkit-clip: rect(0px,0px,0px,0px);
  clip: rect(0px,0px,0px,0px);
  height: 1px;
  width: 1px;
  padding: 0px;
  overflow: hidden;
  white-space: nowrap;
  position: absolute;
}

<div>
  <div
    class="sc-AxhCb c0"
  >
    <span
      data-reach-custom-checkbox-container=""
      data-state="unchecked"
    >
      <div
        class="c1"
      >
        <input
          aria-checked="false"
          data-reach-custom-checkbox-input=""
          type="checkbox"
        />
      </div>
      <div
        class="c2"
        tabindex="0"
      />
    </span>
  </div>
</div>
`;

exports[`<Flex /> should render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div>
  <div
    class="sc-AxhCb c0"
  />
</div>
`;

exports[`<Heading /> should render 1`] = `
.c0 {
  font-size: 40px;
  line-height: normal;
  width: xl;
  height: xl;
  line-height: 1.5;
}

<div>
  <h1
    class="c0"
  />
</div>
`;

exports[`<Input /> should render 1`] = `
.c0 {
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 12px;
  padding-right: 32px;
  border-width: 1px;
  border-radius: 4px;
  -webkit-transition: all 250ms ease 0s;
  transition: all 250ms ease 0s;
  outline: none;
  width: 100%;
}

.c0:focus {
  border-color: #a4cafe;
  box-shadow: 0 0 0 3px rgba(164,202,254,.45);
}

.c0:disabled {
  background-color: #EAEAEA;
  color: #8F8F8F;
  cursor: not-allowed;
}

<div>
  <input
    class="c0"
  />
</div>
`;

exports[`<Link /> should render 1`] = `
.c0 {
  font-size: 16px;
}

<div>
  <a
    class="c0"
  />
</div>
`;

exports[`<PseudoBox /> should render 1`] = `
<div>
  <div
    class="sc-AxhCb "
  />
</div>
`;

exports[`<Select /> should render 1`] = `
.c0 {
  position: relative;
  display: block;
  position: relative;
}

.c1 {
  -webkit-appearance: none;
  -webkit-box-align: center;
  -webkit-writing-mode: horizontal-tb;
  width: 100%;
  background-color: #fff;
  border-width: 1px;
  color: #374151;
  font-weight: 500;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  white-space: nowrap;
  vertical-align: middle;
  font-size: 14px;
  line-height: 20px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  border-radius: 5px;
  -webkit-transition: all 150ms ease 0s;
  transition: all 150ms ease 0s;
  outline: none;
}

.c1:hover {
  background-color: #f9fafb;
}

.c1:focus {
  border-color: #a4cafe;
  box-shadow: 0 0 0 3px rgba(118,169,250,.45);
  outline: 0;
}

.c1:disabled {
  background-color: #EAEAEA;
  color: #8F8F8F;
  cursor: not-allowed;
}

.c3 {
  height: 1.25rem;
  width: 1.25rem;
}

.c2 {
  position: absolute;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 1.5rem;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  right: 15px;
  top: 50%;
  pointer-events: none;
  z-index: 2;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

<div>
  <div
    class="sc-AxhCb c0"
  >
    <select
      class="c1"
    />
    <div
      class="c2"
    >
      <svg
        class="c3"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`<Table /> should render 1`] = `
.c0 {
  border-radius: 8px;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
}

.c1 {
  min-width: 100%;
  border-collapse: collapse;
}

<div>
  <div
    class="c0"
  >
    <table
      class="sc-AxhCb c1"
    />
  </div>
</div>
`;

exports[`<Text /> should render 1`] = `
.c0 {
  font-size: 16px;
  line-height: 1.5;
}

<div>
  <p
    class="c0"
  />
</div>
`;
